export default {
  home: 'Accueil',
  shopping: 'Courses',
  parameters: 'Paramètres',
  recipe: 'Recette',
  search: 'Recherche',
  plannification: 'Planification',
};

