export default {
  title: 'Title',
  description: 'Description',
  tags: 'Tags',
  tagExplanation:
    'Tags are a way to identify a recipe and make easier its search.\nHere are some examples of tags you can have : ',
  noRecipesFound: 'No recipes found matching your filters',

...
  preparationOCRStepContent: 'Content of step',

  personPrefixOCR: 'How many serving (people) ?',
  personPrefixEdit: 'This recipe is for : ',
  personSuffixEdit: ' persons',

  validateReadOnly: 'Add to the menu',
  validateEdit: 'Validate the recipe with these modifications',
  validateAdd: 'Add this new recipe',

  extractingRecipeData: 'Extracting recipe data...',

  editRecipe: 'Edit Recipe',
  deleteRecipe: 'Delete Recipe',
  recommendation: 'Recommendation',
  searchRecipeTitle: 'Title of recipe',

  persons: 'persons',

  recipeCard: {
    prepTime: '{{time}} min',
    persons: '{{count}} persons',
...
