...
   * if (success) {
   *   console.log("Element deleted successfully");
   * }
   * ```
   */
  public async deleteElementById(id: number, db: SQLiteDatabase): Promise<boolean> {
    const deleteQuery = `DELETE
                             FROM "${this.m_tableName}"
                             WHERE ${this.m_idColumn} = ?;`;
    try {
      const runRes = await db.runAsync(deleteQuery, [id]);
      if (runRes.changes === 0) {
        databaseLogger.error("deleteElementById: Can't delete element with id ", id);
...
