export default {
  shoppingList: 'Shopping List',
  addToShoppingList: 'Add to Shopping List',
  purchased: 'Already purchased',
  noItemsInShoppingList: 'No items in shopping list',
  recipeUsingMessage: 'Here are the list of recipes using this ingredient',
  recipeUsingTitle: 'Recipes that use',
  recipeUsingValidation: 'OK',
  recipes: 'recipes',
  recipe: 'recipe',
  Recipe: 'Recipe',
  clearShoppingList: 'Clear Shopping List',
  confirmClearShoppingList: 'Are you sure you want to clear the entire shopping list?',
};
