export default {
  missingElements: {
    titleAll: 'Tous les éléments sont manquants',
    titleSingular: 'Élement manquant',
    titlePlural: 'Élements manquants',
    messageAll:
      "Vous n'avez renseignés aucun des éléments de la recette. Avant de valider, veuillez renseigner : \n\t- une image\n\t- un titre\n\t- des ingrédients\n\t- des instructions pour la préparation\n\t- le nombre de personnes",
    messageSingularBeginning: 'Votre recette manque de ',
    messageSingularEnding: ". Veuillez l'ajouter avant de valider.",
    messageSingularNutrition:
      "Votre recette manque d'informations nutritionnelles complètes. Veuillez les ajouter avant de valider.",
...
