appId: "com.recipedia"
---
- tapOn:
    text: "Parameters"
    label: "Tap on Parameters button in the bottom bar"
- runFlow:
    file: "../../asserts/Parameters/en/assertParametersScreen.yaml"
    label: "Check that the Parameters screen is displayed correctly in English"
- tapOn:
    id: "Parameters::Section::Appearance::DarkMode::Switch"
    label: "Toggle the dark mode switch on"
- tapOn:
    id: "Parameters::Section::Appearance::DarkMode::Switch"
    label: "Toggle the dark mode switch off to restore state"
- tapOn:
    text: "Home"
    label: "Navigate back to the home screen"
