appId: "com.recipedia"

---

- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "Succès"
    label: Alert title is rendered
- assertVisible:
    id: "android:id/message"
    text: "Recette \"Chicken Tacos\" ajoutée avec succès à la liste de courses"
    label: Alert message, is rendered
- assertVisible:
    id: "android:id/button1"
    text: "OK"
    label: Alert validation is rendered
- tapOn:
    text: "OK"
    label: Close the Alert
