appId: "com.recipedia"
---

# TODO add the capability to take pictures
- runFlow: ./Manual/openAddManually.yaml

- runFlow: ./Manual/addAiguillettes.yaml
- runFlow: ../../../asserts/Recipe/Edit/aiguillettesFull.yaml
- tapOn:
    text: "Add this new recipe"
    label: Add the new recipe
- runFlow: ../../../asserts/Recipe/addedRecipeAlert.yaml
- tapOn:
    text: "UNDERSTOOD"
    label: Close the Alert
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    text: "Title of recipe"
    label: Tap on Search bar
- inputText:
    text: "Aig"
    label: Search new recipe
- pressKey: "enter"
- tapOn:
    text: "Aiguillettes de poulet a la sauce satay, Healthy, Italian, Prep. 20 min,\
    \ 2 p."
    label: Press the newly created recipe to check its content
- runFlow: ../../../asserts/Recipe/ReadOnly/aiguillettesFull.yaml
- pressKey: "BACK"
- pressKey: "BACK"
- tapOn:
    text: "󰍴"
    label: Reduce the bottom right buttons
