appId: "com.recipedia"
---
- assertVisible:
    text: "Missing element"
    label: Alert title is displayed
- assertVisible:
    text: "You're missing some instructions for the preparation to your recipe. Please add this before validate."
    label: Alert message containing all missing elements is displayed
- assertVisible:
    text: "OK"
    label: Alert validation button is displayed
- tapOn:
    text: "OK"
    label: Tap on the validation button
