appId: "com.recipedia"
---
- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "Élements manquants"
    label: "Alert title is displayed in French"
- assertVisible:
    text: "Vous n'avez pas renseigné tous les éléments essentiels à une recette. Avant de valider, veuillez renseigner : \n\t- un titre\n\t- des ingrédients\n\t- des instructions pour la préparation\n\t- le nombre de personnes"
    label: "Alert message containing all missing elements is displayed in French"
- assertVisible:
    id: "android:id/button1"
    text: "Compris"
    label: "Alert validation button is displayed in French"
- tapOn:
    id: "android:id/button1"
    label: "Tap on the validation button"
